<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@drawable/numbers"
    tools:context="com.eduardo.brownianmonkey.SettingsActivity">

    <TextView
        android:id="@+id/txt_tipo"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/config_tipo"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="19sp"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold|italic"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/txt_tipo"
        app:layout_constraintTop_toBottomOf="@id/txt_tipo" />


    <TextView
        android:id="@+id/txt_tempo"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/config_tempo"
        app:layout_constraintRight_toLeftOf="@id/spinner"
        app:layout_constraintTop_toBottomOf="@id/spinner"
        android:textSize="19sp"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold|italic"/>

    <TextView
        android:id="@+id/txt_tempo_valor"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/config_tempo_valor"
        app:layout_constraintRight_toLeftOf="@id/txt_tempo"
        app:layout_constraintTop_toBottomOf="@id/txt_tempo"
        android:textSize="16sp"
        android:textColor="@android:color/holo_red_light"
        android:textStyle="bold|italic"/>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="25"
        app:layout_constraintRight_toLeftOf="@id/txt_tempo_valor"
        app:layout_constraintTop_toBottomOf="@id/txt_tempo_valor" />



</android.support.constraint.ConstraintLayout>
